Fix tools label alignment

--- a/templates/default/theme2.css
+++ b/templates/default/theme2.css
@@ -2238,6 +2238,9 @@ span.et2_checkbox_slideSwitch > span.slideSwitch_container a {
 .et2_smallpart-videooverlay.editable .et2_hbox.et2_box_widget.overlay_toolbar > * {
   margin-right: 10px;
 }
+.et2_smallpart-videooverlay.editable .et2_hbox.et2_box_widget.overlay_toolbar .et2_label:first-child {
+  margin-top: 3px;
+}
 .et2_smallpart-videooverlay.editable .et2_hbox.et2_box_widget.elementsContainer {
   height: calc(100% - 60px) !important;
   top: 30px;
